web-infras/parser/tests/fixtures/esprima/ES2016/strict-directive/invalid-strict-generator-default-value/output.txt
[SyntaxError]: Illegal 'use strict' directive in function with non-simple parameter list. (1,21)
1|function *g(a = 1){ "use strict"; }
 |                   ^
